--- a/html-css/contacts.html
+++ b/html-css/contacts.html
@@ -10,17 +10,17 @@
 <body>
     <a href="index.html">Главная</a>
     <a href="contacts.html">Контакты</a>
-    <h2>Contact Us</h2>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti, ipsam.</p>
+    <h2 class="h2-text-contacts">Contact Us</h2>
+    <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti, ipsam.</p>
     <img src="img/785342.png" alt="человек">
-    <h4>Address</h4>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-    <h4>Phone</h4>
+    <h4 class="h4-text">Address</h4>
+    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+    <h4 class="h4-text">Phone</h4>
     <ul>
         <li>+7-854-154-85-42</li>
         <li>+7-854-154-93-56</li>
     </ul>
-    <h4>Online service</h4>
+    <h4 class="h4-text">Online service</h4>
     <ul>
         <li>
             <a href="https://www.google.ru/" target="_blank">Google.com</a>
@@ -29,26 +29,26 @@
             <a href="https://mail.ru/" target="_blank">prodam.garaj@mail.ru</a>
         </li>
     </ul>
-    <p>г.Новемберск, ул. Николая Просвящения, д.666</p>
-    <p>+7-911-112-01-02</p>
+    <p class="text">г.Новемберск, ул. Николая Просвящения, д.666</p>
+    <p class="text">+7-911-112-01-02</p>
     <form>
-        <h4>Send us message</h4>
-        Full name <input type="text"><br>
-        Email <input type="email"><br>
-        Message <textarea name="" id="" cols="30" rows="5"></textarea><br>
-        <button type="submit">Отправить</button><br>
+        <h4 class="h4-text">Send us message</h4>
+        Full name <input type="text" class="text-area"><br>
+        Email <input type="email" class="text-area"><br>
+        Message <textarea name="" id="" cols="30" rows="5" class="text-area"></textarea><br>
+        <button type="submit" class="b-submit">Отправить</button><br>
         <button type="reset">Очистить</button><br>
         <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aa0d6be01ea0359f7571652a11c0f17a014a577fd1f18b32b7c74dab0763f7ff9&amp;width=500&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script><br>
     </form>
-    <h3>Зачем?</h3>
-    <p>Тренировка воображения, возможно, но это не точно. Возможно просто наполняем страницу.</p>
+    <h3 class="h3-text">Зачем?</h3>
+    <p class="text">Тренировка воображения, возможно, но это не точно. Возможно просто наполняем страницу.</p>
     <hr>
     <ul>
         <li>Продам гараж. Срочно!</li>
         <li>+7-854-154-85-42</li>
         <li>prodam.garaj@gmail.com</li>
     </ul>
-    <p>Все права защищены</p>
+    <p class="text">Все права защищены</p>
     <!-- Подключить скрипт -->
 </body>
 </html>
