--- a/html-css/index.html
+++ b/html-css/index.html
@@ -8,27 +8,55 @@
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-    <a id="top" href="index.html">Главная</a>
-    <a href="contacts.html">Контакты</a>
-    <h1 class="h1-text">Текст большой</h1>
-    <p class="text">Здесь находится произвольный текст. Настолько произвольный, что мне пришлось думать минут 5 для того что бы заполнить этот параграф хоть каким-то текстом. Вроде бы получилось.</p>
+    <div class="block__header">
+        <div class="block__content">
+            <div class="block__menu">
+                <a id="top" href="index.html">Главная</a>
+                <a href="contacts.html">Контакты</a>
+            </div>
+            <div class="block__h1">
+                <h1 class="h1-text">Текст большой</h1>
+                <p class="text">Здесь находится произвольный текст. Настолько произвольный, что мне пришлось думать минут 5 для того что бы заполнить этот параграф хоть каким-то текстом. Вроде бы получилось.</p>
+            </div>
+        </div>
+    </div>
 
-    <h3 class="h3-text">Текст поменьбше</h3>
-    <h4 class="h4-text">Текст чуть меньше</h4>
-    <p class="text">Снова параграф с произвольным текстом. Это сложнее чем я думал, серьезно.</p>
+    <div class="block__content">
+            <h3 class="h3-text">Текст поменьбше</h3>
+        <div class="block__cardholder">
+            <div class="block__card">
+                <h4 class="h4-text">Текст чуть меньше</h4>
+                <p class="text">Снова параграф с произвольным текстом. Это сложнее чем я думал, серьезно.</p>
+            </div>
+        </div>
+    </div>
 
-    <h3 class="h3-text">Текст заголовка</h3>
-    <p class="text">Порой кажется что в моей голове пусто, когда просят написать произвольный текст...</p>
+    <div class="block__p">
+        <h3 class="h3-text">Текст заголовка</h3>
+        <p class="text">Порой кажется что в моей голове пусто, когда просят написать произвольный текст...</p>
+    </div>
 
-    <h3 class="h3-text">Зачем?</h3>
-    <p class="text">Тренировка воображения, возможно, но это не точно. Возможно просто наполняем страницу.</p>
-    <hr>
-    <ul>
-        <li>Продам гараж. Срочно!</li>
-        <li>+7-854-154-85-42</li>
-        <li>prodam.garaj@gmail.com</li>
-    </ul>
-    <p class="text">Все права защищены</p>
+    <div class="block__footer">
+        <div class="block_connection">
+            <div class="block__h3">
+                <h3 class="h3-text">Зачем?</h3>
+                <p class="text">Тренировка воображения, возможно, но это не точно. Возможно просто наполняем страницу.</p>
+            </div>
+        </div>
+    
+        <div class="line"></div>
+
+        <div class="block__callback">
+            <ul>
+                <li>Продам гараж. Срочно!</li>
+                <li>+7-854-154-85-42</li>
+                <li>prodam.garaj@gmail.com</li>
+            </ul>
+            <div class="block__rights">
+                <p class="text">Все права защищены</p>
+            </div>
+        </div>
+    </div>
     <!-- Подключить скрипт -->
 </body>
 </html>
