--- a/html-css/index.html
+++ b/html-css/index.html
@@ -31,7 +31,7 @@
         </div>
     </div>
 
-    <div class="block__p">
+    <div class="block__main__text">
         <h3 class="h3-text">Текст заголовка</h3>
         <p class="text">Порой кажется что в моей голове пусто, когда просят написать произвольный текст...</p>
     </div>
