--- a/html-css/contacts.html
+++ b/html-css/contacts.html
@@ -22,6 +22,7 @@
         </div>
     </div>
 
+    <div class="block__flex__c">
         <div class="block__contacts">
             <img src="img/785342.png" alt="человек">
             <h4 class="h4-text">Address</h4>
@@ -44,18 +45,19 @@
             <p class="text">+7-911-112-01-02</p>
         </div>
         
-    <div class="block__form">
-        <form>
-            <h4 class="h4-text">Send us message</h4>
-                Full name <input type="text" class="text-area"><br>
-                Email <input type="email" class="text-area"><br>
-                Message <textarea name="" id="" cols="30" rows="5" class="text-area"></textarea><br>
-                <button type="submit" class="b-submit">Отправить</button><br>
-                <button type="reset" class="b-submit">Очистить</button><br>
-                <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aa0d6be01ea0359f7571652a11c0f17a014a577fd1f18b32b7c74dab0763f7ff9&amp;width=500&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script><br>
-        </form>
-        <h3 class="h3-text">Зачем?</h3>
-        <p class="text">Тренировка воображения, возможно, но это не точно. Возможно просто наполняем страницу.</p>
+        <div class="block__form">
+            <form>
+                <h4 class="h4-text">Send us message</h4>
+                    Full name <input type="text" class="text-area"><br>
+                    Email <input type="email" class="text-area"><br>
+                    Message <textarea name="" id="" cols="30" rows="5" class="text-area"></textarea><br>
+                    <button type="submit" class="b-submit">Отправить</button><br>
+                    <button type="reset" class="b-submit">Очистить</button><br>
+                    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aa0d6be01ea0359f7571652a11c0f17a014a577fd1f18b32b7c74dab0763f7ff9&amp;width=500&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script><br>
+            </form>
+            <h3 class="h3-text">Зачем?</h3>
+            <p class="text">Тренировка воображения, возможно, но это не точно. Возможно просто наполняем страницу.</p>
+        </div>
     </div>
 
     <div class="line_c"></div>
