Start adding content from figma layout

--- a/html-css/index.html
+++ b/html-css/index.html
@@ -4,45 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Project Figma</title>
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-    <div class="block__header">
-        <div class="block__content container">
+    <div class="block__top">
+        <div class="container">
             <div class="block__menu">
-                <a id="top" href="index.html">Главная</a>
-                <a href="contacts.html">Контакты</a>
+                <a href="index.html"><img src="img/logo.svg" alt="logo"></a>
+                <a href="contacts.html"><img src="img/contacts.svg" alt="contacts"></a>
             </div>
-            <div class="block__h1">
-                <h1 class="h1-text">Текст большой</h1>
-                <div class="block__p">
-                    <p class="text">Здесь находится произвольный текст. Настолько произвольный, что мне пришлось думать минут 5 для того что бы заполнить этот параграф хоть каким-то текстом. Вроде бы получилось.</p>
-                </div>
+            <div class="block__text">
+                <h1 class="h1-text">New Automation
+                    Tool for Your </h1>
+                <p class="p-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus tristique vulputate ultrices ut mauris tellus at. Posuere sollicitudin odio tellus elit.</p>
+                <button class="button-top">See Our Project</button>
             </div>
         </div>
     </div>
 
     <div class="block__central">
         <div class="block__content container">
-            <h3 class="h3-text">Текст поменьбше</h3>
+            <h3 class="h3-text">What we do to help our client grow in digital era</h3>
         <div class="block__cardholder">
             <div class="block__card">
-                <h4 class="h4-text">Текст чуть меньше</h4>
-                <p class="text">Снова параграф с произвольным текстом. Это сложнее чем я думал, серьезно.</p>
+                <h4 class="h4-text">Make Your business To Be
+                    Better Famous In Internet</h4>
+                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
             </div>
             <div class="block__card">
-                <h4 class="h4-text">Текст чуть меньше</h4>
-                <p class="text">Снова параграф с произвольным текстом. Это сложнее чем я думал, серьезно.</p>
+                <h4 class="h4-text">Bring Technology To Your 
+                    Comfrotable Home</h4>
+                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
             </div>
             <div class="block__card">
-                <h4 class="h4-text">Текст чуть меньше</h4>
-                <p class="text">Снова параграф с произвольным текстом. Это сложнее чем я думал, серьезно.</p>
+                <h4 class="h4-text">Build Your Digital Product
+                    That Suitable For Your Need</h4>
+                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
             </div>
         </div>
         <div class="block__main__text">
-            <h3 class="h3-text">Текст заголовка</h3>
-            <p class="text">Порой кажется что в моей голове пусто, когда просят написать произвольный текст...</p>
+            <h3 class="h3-text">Our Finished Project</h3>
+            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
         </div>
         </div>
     </div>
@@ -52,8 +55,9 @@
             <div class="block_connection">
                 <div class="block__h3">
                     <div class="h3">
-                        <h3 class="h3-text">Зачем?</h3>
-                        <p class="text">Тренировка воображения, возможно, но это не точно. Возможно просто наполняем страницу.</p>
+                        <h3 class="h3-text">Intersted to woek
+                            with our team?</h3>
+                        <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
                     </div>
                 </div>
             </div>
@@ -61,9 +65,11 @@
             <div class="line"></div>
     
             <div class="block__callback">
-                    <p>Продам гараж. Срочно!</p>
-                    <p>+7-854-154-85-42</p>
-                    <p>prodam.garaj@gmail.com</p>
+                   <ol class="list__text">
+                       <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+                       <li>+7-812-7313-4321</li>
+                       <li>hello.site@gmail.com</li>
+                   </ol>
                 <div class="block__rights">
                     <p class="text">Все права защищены</p>
                 </div>
