--- a/html-css/index.html
+++ b/html-css/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="block__top">
-        <div class="container">
+        <div class="container top__box">
             <div class="block__menu">
                 <a href="index.html"><img src="img/logo.svg" alt="logo"></a>
                 <a href="contacts.html"><img src="img/contacts.svg" alt="contacts"></a>
