--- a/html-css/index.html
+++ b/html-css/index.html
@@ -28,16 +28,19 @@
             <h3 class="h3-text">What we do to help our client grow in digital era</h3>
         <div class="block__cardholder">
             <div class="block__card">
+                <img src="img/card1.svg" alt="person-1">
                 <h4 class="h4-text">Make Your business To Be
                     Better Famous In Internet</h4>
                 <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
             </div>
             <div class="block__card">
+                <img src="img/card2.svg" alt="person-2">
                 <h4 class="h4-text">Bring Technology To Your 
                     Comfrotable Home</h4>
                 <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
             </div>
             <div class="block__card">
+                <img src="img/card3.svg" alt="person-3">
                 <h4 class="h4-text">Build Your Digital Product
                     That Suitable For Your Need</h4>
                 <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
