Created full main page

--- a/html-css/index.html
+++ b/html-css/index.html
@@ -73,30 +73,25 @@
     </div>
 
     <div class="block__down">
-        <div class="line">
-            <div class="prefooter">
-                <div class="block__connection">
-                    <div class="h3">
-                        <h3 class="footer__text_h">Intersted to woek
-                            with our team?</h3>
-                        <p class="text footer__text_p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-                    </div>
-                </div>
-                <div class="block_button">
-                    <button class="button__prefooter">Let's talk</button>
+        <div class="prefooter">
+            <div class="block__connection">
+                <div class="h3">
+                    <h3 class="footer__text_h">Intersted to woek
+                        with our team?</h3>
+                    <p class="text footer__text_p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
                 </div>
             </div>
+            <button class="button__prefooter">Let's talk</button>
         </div>
+        <hr/>
         <div class="block__footer">
-            <div class="block__callback">
-                   <ol type="1" class="list__text">
-                       <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-                       <li>+7-812-7313-4321</li>
-                       <li>hello.site@gmail.com</li>
-                   </ol>
-                <div class="block__rights">
-                    <p class="text">2021 All rights reserved.</p>
-                </div>
+                <ul type="1" class="list">
+                    <li class="list__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+                    <li class="list__text">+7-812-7313-4321</li>
+                    <li class="list__text">hello.site@gmail.com</li>
+                </ul>
+            <div class="block__rights">
+                <p class="text">&copy; 2021 All rights reserved.</p>
             </div>
         </div>
     </div>
