Rename classes. Fixed position.

--- a/html-css/index.html
+++ b/html-css/index.html
@@ -8,90 +8,91 @@
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-    <div class="block__top">
+    <div class="top">
         <div class="container top__box">
-            <div class="block__menu">
-                <a href="index.html"><img src="img/logo.svg" alt="logo"></a>
-                <a href="contacts.html"><img src="img/contacts.svg" alt="contacts"></a>
-            </div>
-            <div class="block__text">
-                <h1 class="h1-text">New Automation
+            <ul class="header">
+                <li><a href="index.html"><img src="img/logo.svg" alt="logo"></a></li>
+                <li><a href="contacts.html"><img src="img/contacts.svg" alt="contacts"></a></li>
+            </ul>
+            <div class="top__info">
+                <h1 class="top__heading">New Automation
                     Tool for Your </h1>
-                <p class="p-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus tristique vulputate ultrices ut mauris tellus at. Posuere sollicitudin odio tellus elit.</p>
-                <button class="button-top">See Our Project</button>
+                <p class="text top__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus tristique vulputate ultrices ut mauris tellus at. Posuere sollicitudin odio tellus elit.</p>
+                <button class="top__button">See Our Project</button>
             </div>
         </div>
     </div>
 
-    <div class="block__central">
-        <div class="block__content container">
-            <h3 class="h3-text">What we do to help our client grow in digital era</h3>
-        <div class="block__cardholder">
-            <div class="block__card">
+    <div class="what-we-do container">
+        <h3 class="heading">What we do to help our client grow in digital era</h3>
+        <div class="card-box">
+            <div class="card">
                 <img class="card__img" src="img/card1.svg" alt="person-1">
-                <h4 class="h4-text">Make Your business To Be
+                <h4 class="heading-mini">Make Your business To Be
                     Better Famous In Internet</h4>
                 <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
                     ut labore et dolore magna aliqua.</p>
                 <a class="card__link" href="#">Learn more</a>
             </div>
-            <div class="block__card">
+            <div class="card">
                 <img class="card__img" src="img/card2.svg" alt="person-1">
-                <h4 class="h4-text">Bring Technology To Your 
+                <h4 class="heading-mini">Bring Technology To Your 
                     Comfrotable Home</h4>
                 <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 <a class="card__link" href="#">Learn more</a>
             </div>
-            <div class="block__card">
+            <div class="card">
                 <img class="card__img" src="img/card3.svg" alt="person-1">
-                <h4 class="h4-text">Build Your Digital Product
+                <h4 class="heading-mini">Build Your Digital Product
                     That Suitable For Your Need</h4>
                 <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 <a class="card__link" href="#">Learn more</a>
             </div>
         </div>
-        <div class="block__main__text">
-            <h3 class="h3-text">Our Finished Project</h3>
-            <p class="text text_project">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-            <div class="project__item">
-                <img class="project__img" src="img/ProjectMobile.png" alt="Photo">
-                <p class="project__text">Smart Home Installation</p>
-            </div>
-            <div class="project__parent">
-                <div class="project_item project_item_margin">
-                    <img class="project__img" src="img/ProjectWidth.png" alt="Photo">
-                    <p class="project__text_mini_left">Sparklite App</p>  
-                </div>
-                <div class="project_item">
-                    <img class="project__img" src="img/ProjectAuto.png" alt="Photo">
-                    <p class="project__text_mini_right">Car-Rapetition App</p>
-                </div>
-            </div>
-        </div>
-        </div>
-        
     </div>
 
-    <div class="block__down">
-        <div class="prefooter">
-            <div class="block__connection">
-                <div class="h3">
-                    <h3 class="footer__text_h">Intersted to woek
-                        with our team?</h3>
-                    <p class="text footer__text_p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-                </div>
+    <div class="project container">
+        <h3 class="heading">Our Finished Project</h3>
+        <p class="text text_project">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+        <div class="project__item">
+            <img class="project__img" src="img/ProjectMobile.png" alt="Photo">
+            <p class="project__text">Smart Home Installation</p>
+        </div>
+
+        <div class="project__parent">
+            <div class="project_item project__item_margin">
+                <img class="project__img" src="img/ProjectWidth.png" alt="Photo">
+                <p class="project__text project__text_mini-l">Sparklite App</p>  
             </div>
-            <button class="button__prefooter">Let's talk</button>
+            <div class="project_item">
+                <img class="project__img" src="img/ProjectAuto.png" alt="Photo">
+                <p class="project__text project__text_mini-r">Car-Rapetition App</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer">
+        <div class="container">
+            <div class="footer__top">
+                <div class="footer__text">
+                    <h3 class="heading footer__heading">Intersted to woek
+                        with our team?</h3>
+                    <p class="text text_footer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                </div>
+                <a class="footer__button">Let's talk</a>
+            </div>
         </div>
         <hr/>
-        <div class="block__footer">
-                <ul type="1" class="list">
-                    <li class="list__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-                    <li class="list__text">+7-812-7313-4321</li>
-                    <li class="list__text">hello.site@gmail.com</li>
+        <div class="container">
+            <div class="footer__bottom">
+                <ul class="footer__info">
+                    <li class="footer__list">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+                    <li class="footer__list">+7-812-7313-4321</li>
+                    <li class="footer__list">hello.site@gmail.com</li>
                 </ul>
-            <div class="block__rights">
-                <p class="text">&copy; 2021 All rights reserved.</p>
+                <div class="footer__copy">
+                    <p class="text footer__copy-text">&copy; 2021 All rights reserved.</p>
+                </div>
             </div>
         </div>
     </div>
