--- a/html-css/index.html
+++ b/html-css/index.html
@@ -17,8 +17,8 @@
             <div class="top__info">
                 <h1 class="top__heading">New Automation
                     Tool for Your </h1>
-                <p class="text top__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus tristique vulputate ultrices ut mauris tellus at. Posuere sollicitudin odio tellus elit.</p>
-                <button class="top__button">See Our Project</button>
+                <p class="text top__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus tristique vulputate ultrices ut mauris tellus at. Posuere sollicitudin odio tellus elit. </p>
+                <a class="top__button">See Our Project</a>
             </div>
         </div>
     </div>
@@ -62,11 +62,11 @@
         <div class="project__parent">
             <div class="project_item project__item_margin">
                 <img class="project__img" src="img/ProjectWidth.png" alt="Photo">
-                <p class="project__text project__text_mini-l">Sparklite App</p>  
+                <p class="project__text project__text_mini">Sparklite App</p>  
             </div>
             <div class="project_item">
                 <img class="project__img" src="img/ProjectAuto.png" alt="Photo">
-                <p class="project__text project__text_mini-r">Car-Rapetition App</p>
+                <p class="project__text project__text_mini">Car-Rapetition App</p>
             </div>
         </div>
     </div>
@@ -96,6 +96,5 @@
             </div>
         </div>
     </div>
-    <!-- Подключить скрипт -->
 </body>
 </html>
