--- a/html-css/index.html
+++ b/html-css/index.html
@@ -35,14 +35,14 @@
                 <a class="card__link" href="#">Learn more</a>
             </div>
             <div class="card">
-                <img class="card__img" src="img/card2.svg" alt="person-1">
+                <img class="card__img" src="img/card3.svg" alt="person-1">
                 <h4 class="heading-mini">Bring Technology To Your 
                     Comfrotable Home</h4>
                 <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 <a class="card__link" href="#">Learn more</a>
             </div>
             <div class="card">
-                <img class="card__img" src="img/card3.svg" alt="person-1">
+                <img class="card__img" src="img/card2.svg" alt="person-1">
                 <h4 class="heading-mini">Build Your Digital Product
                     That Suitable For Your Need</h4>
                 <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -60,11 +60,11 @@
         </div>
 
         <div class="project__parent">
-            <div class="project_item project__item_margin">
+            <div class="project__item project__item_margin">
                 <img class="project__img" src="img/ProjectWidth.png" alt="Photo">
-                <p class="project__text project__text_mini">Sparklite App</p>  
+                <p class="project__text project__text_mini">Sparklite App</p>
             </div>
-            <div class="project_item">
+            <div class="project__item">
                 <img class="project__img" src="img/ProjectAuto.png" alt="Photo">
                 <p class="project__text project__text_mini">Car-Rapetition App</p>
             </div>
