Added image in contacts page. Start creating contacts page.

--- a/html-css/contacts.html
+++ b/html-css/contacts.html
@@ -8,17 +8,15 @@
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-    <div class="block__header">
-        <div class="block__content container">
-            <div class="block__menu">
-                <a id="top" href="index.html">Главная</a>
-                <a href="contacts.html">Контакты</a>
-            </div>
-            <div class="block__h1">
-                <h1 class="h1-text-contacts">Contact Us</h1>
-                <div class="block__p">
-                    <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti, ipsam.</p>
-                </div>
+    <div class="top_c">
+        <div class="container top__box">
+            <ul class="header_c">
+                <li><a href="index.html"><img src="img/logo.svg" alt="logo"></a></li>
+                <li><a href="contacts.html"><img src="img/contacts.svg" alt="contacts"></a></li>
+            </ul>
+            <div class="top__info_c">
+                <h1 class="top__heading_c">Contact Us</h1>
+                <p class="text top__text_c">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
         </div>
     </div>
@@ -49,7 +47,7 @@
             
             <div class="block__form">
                 <form>
-                    <h4 class="h4-text">Send us message</h4>
+                    <h4 class="form__text">Send us message</h4>
                         Full name <input type="text" class="text-area"><br>
                         Email <input type="email" class="text-area"><br>
                         Message <textarea name="" id="" cols="30" rows="5" class="text-area"></textarea><br>
