Create road map

--- a/site-portfolio/index.html
+++ b/site-portfolio/index.html
@@ -11,7 +11,11 @@
     <div class="top">
         <div class="header container">
             <div class="menu">
-
+                <ul class="menu_list">
+                    <li class="menu_item">Lorem</li>
+                    <li class="menu_item">Lorem</li>
+                    <li class="menu_item">Lorem</li>
+                </ul>
             </div>
         </div>
     </div>
@@ -20,10 +24,31 @@
             <div class="roadMap">
                 <div class="roadMap_item">
                     <div class="roadMap_item_checkPoint">
-                        <div class="verticalLine"></div>
-                        <div class="circle"></div>
+                        <div class="verticalLine verticalLine_start"></div>
+                        <div class="circle">&#10004;</div>
                     </div>
-                    <div class="roadMap_item_content"></div>
+                    <div class="roadMap_item_content"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, possimus!</p></div>
+                </div>
+                <div class="roadMap_item">
+                    <div class="roadMap_item_checkPoint">
+                        <div class="verticalLine verticalLine_middle"></div>
+                        <div class="circle">&#10004;</div>
+                    </div>
+                    <div class="roadMap_item_content"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, possimus!</p></div>
+                </div>
+                <div class="roadMap_item">
+                    <div class="roadMap_item_checkPoint">
+                        <div class="verticalLine verticalLine_middle verticalLine_middle_notC"></div>
+                        <div class="circle circle_notC"><p>&#10006;</p></div>
+                    </div>
+                    <div class="roadMap_item_content"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, possimus!</p></div>
+                </div>
+                <div class="roadMap_item">
+                    <div class="roadMap_item_checkPoint">
+                        <div class="verticalLine verticalLine_end verticalLine_end_notC"></div>
+                        <div class="circle circle_notC">&#10006;</div>
+                    </div>
+                    <div class="roadMap_item_content"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, possimus!</p></div>
                 </div>
             </div>
         </div>
