Fix bug in road map

--- a/site-portfolio/index.html
+++ b/site-portfolio/index.html
@@ -25,28 +25,28 @@
                 <div class="roadMap_item">
                     <div class="roadMap_item_checkPoint">
                         <div class="verticalLine verticalLine_start"></div>
-                        <div class="circle">&#10004;</div>
+                        <div class="circle"><p class="circle_symbol"></p></div>
                     </div>
                     <div class="roadMap_item_content"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, possimus!</p></div>
                 </div>
                 <div class="roadMap_item">
                     <div class="roadMap_item_checkPoint">
                         <div class="verticalLine verticalLine_middle"></div>
-                        <div class="circle">&#10004;</div>
+                        <div class="circle"><p class="circle_symbol"></p></div>
                     </div>
                     <div class="roadMap_item_content"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, possimus!</p></div>
                 </div>
                 <div class="roadMap_item">
                     <div class="roadMap_item_checkPoint">
                         <div class="verticalLine verticalLine_middle verticalLine_middle_notC"></div>
-                        <div class="circle circle_notC"><p>&#10006;</p></div>
+                        <div class="circle circle_notC"><p class="circle_symbol circle_symbol_notC"></p></div>
                     </div>
                     <div class="roadMap_item_content"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, possimus!</p></div>
                 </div>
                 <div class="roadMap_item">
                     <div class="roadMap_item_checkPoint">
                         <div class="verticalLine verticalLine_end verticalLine_end_notC"></div>
-                        <div class="circle circle_notC">&#10006;</div>
+                        <div class="circle circle_notC"><p class="circle_symbol circle_symbol_notC"></p></div>
                     </div>
                     <div class="roadMap_item_content"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, possimus!</p></div>
                 </div>
