--- a/site-portfolio/index.html
+++ b/site-portfolio/index.html
@@ -11,44 +11,63 @@
     <div class="top">
         <div class="header container">
             <div class="menu">
-                <ul class="menu_list">
-                    <li class="menu_item">Lorem</li>
-                    <li class="menu_item">Lorem</li>
-                    <li class="menu_item">Lorem</li>
+                <ul class="menu_left">
+                    <li class="menu_item">CV</li>
+                    <li class="menu_item">Project</li>
+                    <li class="menu_item">Contacts</li>
+                </ul>
+                <ul class="menu_right">
+                    <li class="menu_item">Eng</li>
+                    <li class="menu_item">Theme</li>
                 </ul>
             </div>
         </div>
     </div>
     <div class="middle">
         <div class="content container">
+            <div class="CV">
+                <div class="CV_head">
+                    <div class="photo">
+                        <img src="../html-css/img/Profile_Photo.png" alt="">
+                    </div>
+                    <div class="article">
+                        <h1>Nesterov Denis</h1>
+                        <p class="p_CV">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi quibusdam voluptatum magni quo doloribus unde ad maxime sapiente harum officiis.</p>
+                        <h2>Soft Skills</h2>
+                        <p class="p_CV">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus dolore obcaecati autem, in natus expedita. Soluta ratione rem officia possimus. </p>
+                        <h2>Hard Skills</h2>
+                        <p class="p_CV">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab placeat delectus vel itaque architecto fugiat eum dolor doloribus sit? Earum?</p>
+                    </div>
+                </div>
+            </div>
             <div class="roadMap">
                 <div class="roadMap_item">
                     <div class="roadMap_item_checkPoint">
                         <div class="verticalLine verticalLine_start"></div>
                         <div class="circle"><p class="circle_symbol"></p></div>
                     </div>
-                    <div class="roadMap_item_content"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, possimus!</p></div>
+                    <div class="roadMap_item_content"><p class="p_roadMap">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, possimus!</p></div>
                 </div>
                 <div class="roadMap_item">
                     <div class="roadMap_item_checkPoint">
                         <div class="verticalLine verticalLine_middle"></div>
                         <div class="circle"><p class="circle_symbol"></p></div>
                     </div>
-                    <div class="roadMap_item_content"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, possimus!</p></div>
+                    <div class="roadMap_item_content"><p class="p_roadMap">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, possimus!</p></div>
                 </div>
                 <div class="roadMap_item">
                     <div class="roadMap_item_checkPoint">
                         <div class="verticalLine verticalLine_middle verticalLine_middle_notC"></div>
                         <div class="circle circle_notC"><p class="circle_symbol circle_symbol_notC"></p></div>
                     </div>
-                    <div class="roadMap_item_content"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, possimus!</p></div>
+                    <div class="roadMap_item_content"><p class="p_roadMap">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, possimus!</p></div>
                 </div>
                 <div class="roadMap_item">
                     <div class="roadMap_item_checkPoint">
                         <div class="verticalLine verticalLine_end verticalLine_end_notC"></div>
                         <div class="circle circle_notC"><p class="circle_symbol circle_symbol_notC"></p></div>
                     </div>
-                    <div class="roadMap_item_content"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, possimus!</p></div>
+                    <div class="roadMap_item_content"><p class="p_roadMap">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, possimus!</p></div>
                 </div>
             </div>
         </div>
