Add project block

--- a/site-portfolio/index.html
+++ b/site-portfolio/index.html
@@ -70,6 +70,24 @@
                     <div class="roadMap_item_content"><p class="p_roadMap">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, possimus!</p></div>
                 </div>
             </div>
+            <div class="projects">
+                <div class="project_item1">
+                    <div class="project_label">
+                        <h1 class="project_name">Trafic Counter</h1>
+                        <p class="project_p">Manual traffic counter is a utility to facilitate traffic counting. Get rid of paper notes.</p>
+                    </div>
+                    <img class="project_img" src="../html-css/img/Traffic_Counter.PNG" alt="project_image">
+                </div>
+                <div class="project_item2">
+                    <div class="project_label">
+                        <h1 class="project_name">Responsive website template</h1>
+                        <p class="project_p">Responsive cross-browser website template. Looks great on both desktop and tablet, as well as on a mobile device.
+                        </p>
+                    </div>
+                    <img class="project_img" src="../html-css/img/Figma_Project.PNG" alt="project_image">
+                </div>
+                <div class="project_item3"></div>
+            </div>
         </div>
     </div>
     <div class="bottom">
