prof-layout lesson start

--- a/brandshop/index.html
+++ b/brandshop/index.html
@@ -24,7 +24,10 @@
 </header>
 
 <div id="content">
-    <div id="promo">
+    <?php
+        echo "Hello World!"
+    ?>
+    <!-- <div id="promo">
         <h1 id="promoText">
             Здесь будет рекламный заголовок
         </h1>
@@ -139,7 +142,7 @@
         </div>
 
 
-    </div>
+    </div> -->
 </div>
 
 <footer>
