--- a/prof-layout/index.html
+++ b/prof-layout/index.html
@@ -26,16 +26,42 @@
             <div class="poster_left"></div>
             <div class="poster_right">
                 <div class="poster_right_text">
-                    <h1 class="poster_right_text_h1">The brand</h1>
-                    <h3 class="poster_right_text_h3">of luxerious <span class="colortext">fashion</span></h3>
+                    <h1 class="text_h1">The brand</h1>
+                    <h3 class="text_h3">of luxerious <span class="colortext">fashion</span></h3>
                 </div>
             </div>
         </div>
     </div>
 
-    <middle>
-
-    </middle>
+    <div class="middle">
+        <div class="categories container">
+            <div class="categories_items">
+                <div class="categories_items_small">
+                    <div class="card_small_women">
+                        <div class="card_text">
+                            <h1 class="text_h3_cat">30% off</h1>
+                            <h3 class="text_h1_cat"><span class="colortext">for women</span></h3>
+                        </div>
+                    </div>
+                    <div class="card_small_men">
+                        <div class="card_text">
+                            <h1 class="text_h3_cat">hot deals</h1>
+                            <h3 class="text_h1_cat"><span class="colortext">for men</span></h3>
+                        </div>
+                    </div>
+                    <div class="card_small_kids">
+                        <div class="card_text">
+                            <h1 class="text_h3_cat">new arrivals</h1>
+                            <h3 class="text_h1_cat"><span class="colortext">for kids</span></h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="categories_items_big">
+                    <div class="card_big">luxerious & trendy <span class="colortext">accesories</span></div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <bottom>
 
