--- a/prof-layout/index.html
+++ b/prof-layout/index.html
@@ -23,7 +23,9 @@
     </div>
     <div class="top_bottom">
         <div class="poster container">
-            <div class="poster_left"></div>
+            <div class="poster_left">
+                <img src="/prof-layout/images/poster_man.png" alt="">
+            </div>
             <div class="poster_right">
                 <div class="poster_right_text">
                     <h1 class="text_h1">The brand</h1>
@@ -44,10 +46,10 @@
                         </div>
                     </div>
                     <div class="card_small_men">
-                        <div class="card_text">
-                            <h1 class="text_h3_cat">hot deals</h1>
-                            <h3 class="text_h1_cat"><span class="colortext">for men</span></h3>
-                        </div>
+                            <div class="card_text">
+                                <h1 class="text_h3_cat">hot deals</h1>
+                                <h3 class="text_h1_cat"><span class="colortext">for men</span></h3>
+                            </div>
                     </div>
                     <div class="card_small_kids">
                         <div class="card_text">
@@ -57,14 +59,110 @@
                     </div>
                 </div>
                 <div class="categories_items_big">
-                    <div class="card_big">luxerious & trendy <span class="colortext">accesories</span></div>
+                    <div class="card_text">
+                        <h3 class="text_h3_cat">Luxury & trendy</h3>
+                        <h1 class="text_h1_cat"><span class="colortext">Accesories</span></h1>
+                    </div>
                 </div>
             </div>
         </div>
+
+        <div class="fetured container">
+            <div class="text">
+                <h1 class="text_h1_featured">Fetured items</h1>
+                <p class="text_p_featured">Shop for items based on what we featured in this week</p>
+            </div>
+            <div class="card_items">
+                <div class="card">
+                    <div class="img">
+                        <img src="/prof-layout/images/card.png" alt="">
+                    </div>
+                    <h3 class="text_h3_card">ELLERY X M'O CAPSULE</h3>
+                    <p class="text_p_card">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <p class="text_p_price">$52.00</p>
+                </div>
+                <div class="card">
+                    <div class="img">
+                        <img src="/prof-layout/images/card (2).png" alt="">
+                    </div>
+                    <h3 class="text_h3_card">ELLERY X M'O CAPSULE</h3>
+                    <p class="text_p_card">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <p class="text_p_price">$52.00</p>
+                </div>
+                <div class="card">
+                    <div class="img">
+                        <img src="/prof-layout/images/card (3).png" alt="">
+                    </div>
+                    <h3 class="text_h3_card">ELLERY X M'O CAPSULE</h3>
+                    <p class="text_p_card">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <p class="text_p_price">$52.00</p>
+                </div>
+                <div class="card">
+                    <div class="img">
+                        <img src="/prof-layout/images/card (4).png" alt="">
+                    </div>
+                    <h3 class="text_h3_card">ELLERY X M'O CAPSULE</h3>
+                    <p class="text_p_card">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <p class="text_p_price">$52.00</p>
+                </div>
+                <div class="card">
+                    <div class="img">
+                        <img src="/prof-layout/images/card (5).png" alt="">
+                    </div>
+                    <h3 class="text_h3_card">ELLERY X M'O CAPSULE</h3>
+                    <p class="text_p_card">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <p class="text_p_price">$52.00</p>
+                </div>
+                <div class="card">
+                    <div class="img">
+                        <img src="/prof-layout/images/card (6).png" alt="">
+                    </div>
+                    <h3 class="text_h3_card">ELLERY X M'O CAPSULE</h3>
+                    <p class="text_p_card">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                    <p class="text_p_price">$52.00</p>
+                </div>
+            </div>
+        </div>
+        <div class="button">
+            <button class="button_all-prod">Browse All Product</button>
+        </div>
     </div>
 
-    <bottom>
-
-    </bottom>
+    <div class="bottom">
+        <div class="benefits container">
+            <div class="bf_card">
+                <img src="/prof-layout/images/ftr_delivery.svg" alt="">
+                <h3 class="text_h3_bf">Free Delivery</h3>
+                <p class="text_p_bf">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
+            </div>
+            <div class="bf_card">
+                <img src="/prof-layout/images/ftr_delivery.svg" alt="">
+                <h3 class="text_h3_bf">Free Delivery</h3>
+                <p class="text_p_bf">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
+            </div>
+            <div class="bf_card">
+                <img src="/prof-layout/images/ftr_delivery.svg" alt="">
+                <h3 class="text_h3_bf">Free Delivery</h3>
+                <p class="text_p_bf">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
+            </div>
+        </div>
+        <div class="subs-and-prom">
+            <div class="smoth">
+                <div class="subs-and-prom_left">
+                    <img src="" alt="">
+                    <p class="text_p_subs-and-prom">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum“</p>
+                </div>
+                <div class="subs-and-prom_right">
+                    <h3 class="text_h3_subs-and-prom">SUBSCRIBE</h3>
+                    <h4 class="text_h4_subs-and-prom">FOR OUR NEWLETTER AND PROMOTION</h4>
+                    <form action="">
+                        <input type="email" class="text-area" placeholder="Enter Your Email">
+                        <button class="button_sub">Subscribe</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="copy"></div>
+    </div>
 </body>
 </html>
