Finishing add styles.

--- a/prof-layout/index.html
+++ b/prof-layout/index.html
@@ -136,20 +136,20 @@
                 <p class="text_p_bf">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
             </div>
             <div class="bf_card">
-                <img src="/prof-layout/images/ftr_delivery.svg" alt="">
-                <h3 class="text_h3_bf">Free Delivery</h3>
+                <img src="/prof-layout/images/sales.svg" alt="">
+                <h3 class="text_h3_bf">Sales & discounts</h3>
                 <p class="text_p_bf">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
             </div>
             <div class="bf_card">
-                <img src="/prof-layout/images/ftr_delivery.svg" alt="">
-                <h3 class="text_h3_bf">Free Delivery</h3>
+                <img src="/prof-layout/images/crown.svg" alt="">
+                <h3 class="text_h3_bf">Quality assurance</h3>
                 <p class="text_p_bf">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
             </div>
         </div>
         <div class="subs-and-prom">
             <div class="smoth">
                 <div class="subs-and-prom_left">
-                    <img src="" alt="">
+                    <img src="/prof-layout/images/Intersect.png" alt="">
                     <p class="text_p_subs-and-prom">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum“</p>
                 </div>
                 <div class="subs-and-prom_right">
@@ -162,7 +162,17 @@
                 </div>
             </div>
         </div>
-        <div class="copy"></div>
+        <div class="copy">
+            <div class="copy_left">
+                <p class="text_p_copy">© 2021  Brand  All Rights Reserved.</p>
+            </div>
+            <div class="copy_right">
+                <div class="square"><img src="/prof-layout/images/copy_fb.svg" alt=""></div>
+                <div class="square"><img src="/prof-layout/images/copy_inst.svg" alt=""></div>
+                <div class="square"><img src="/prof-layout/images/copy_pin.svg" alt=""></div>
+                <div class="square"><img src="/prof-layout/images/copy_twit.svg" alt=""></div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
